public/src/css/partials/navbar.css
ul.navbar-nav, ul.navbar-nav li {
	float: left !important;
	margin: 0;
}

@media (max-width: 768px) {
	ul.navbar-left li {
		width: 33.33%;
	}
	ul.navbar-right li {
		width: 100%;
	}
}

ul.navbar-right {
	margin-right: 0 !important;
	margin: 0;
	height: 60px
}

ul.navbar-right, ul.navbar-right li {
	float: right !important;
}

@media (max-width: 768px) {
	ul.navbar-right {
		width: 25%;
	}
	ul.navbar-left {
		width: 75%;	
	}
}

#spNavbar {
	position: relative;
	display: block;
	font-size: 16px;
}

@media (max-width: 768px) {
    #spNavbar .sp-nav-button {
    	font-size: 23px;
    }
}

.navbar {
	height: 60px;
	width: 100%;
}

#spNavbar .navbar-default {
	border-radius: 0;
	border-top: 0;
}

#spNavbar div.container-fluid {
	padding: 0;
	height: 60px;
	width: 100%;
	position: absolute;
}

#spNavbar .navbar-brand {
	height: 58px;	
	padding-bottom: 13px;
	padding-top: 10px;
	margin-left: 0;
	margin-right: 0;
	cursor: pointer;
}

@media (max-width: 768px) {
	#spNavbar .navbar-brand {
		margin-left: auto;
		margin-right: auto;
		display: block;
		float: none;
		padding-left: 5px;
		padding-right: 5px;
		padding-top: 20px;
	}
}

#spNavbar .dropdown {
	height: 60px;	
	padding-top: 5px;
	padding-right: 5px;
	padding-left: 5px;
	cursor: pointer;
}

#spNavbar .dropdown-menu {
	z-index: 1002;
}

#spNavbar .sp-nav-button {
	height: 58px;
	line-height: 58px;
	text-align: center;
	padding: 5px 10px 0 10px;
	margin-left: 10px;
	margin-right: 10px;
}

#spNavbar .sp-active {
	border-bottom: 2px solid;
	border-color: #4387fd;
}

#spNavbar li.sp-active > a {
	color: #333;
}

#spNavbar a {
	padding: 0;
}

#spNavbar .navbar-left > li:hover {
	border-bottom: 2px solid;
	border-color: #4387fd;
}

.sp-friends-indicator {
    position: absolute;
    top: 27px;
    background: #428bca;
    width: 16px;
    height: 16px;
    border: 2px solid white;
    border-radius: 50%;
    z-index: 1;
}

@media (max-width: 768px) {
    .sp-friends-indicator {
        left: 61px;
    }
}

